# torg

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/torg-core/: Cargo.toml  README.md
crates/torg-core/benches/: eval_bench.rs
crates/torg-core/src/: builder.rs  error.rs  eval.rs  graph.rs  lib.rs  limits.rs  token.rs
crates/torg-core/tests/: golden_vectors.rs
crates/torg-mask/: Cargo.toml  README.md
crates/torg-mask/src/: decoder.rs  generator.rs  lib.rs  mapping.rs  mask.rs
crates/torg-serde/: Cargo.toml  README.md
crates/torg-serde/src/: lib.rs
crates/torg-verify/: Cargo.toml  README.md
crates/torg-verify/src/: lib.rs
spec/: draft-arkavo-torg-decision-00.md
tools/demo/: constrained_generate.py
tools/torg_dataset/: __init__.py  generate.py  golden.py  llm_augment.py  requirements.txt  templates.py  tokens.py
tools/train/: ISSUES.md  README.md  autotrain_config.yaml  config.yaml  delete_space.py  fix_dataset.py  merge_and_export.py  prepare_autotrain_dataset.py  requirements.txt  run_autotrain.py  train.py
