[package]
name = "torg-mask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "LLM logit masking for TØR-G constrained decoding"
keywords = ["ai", "llm", "policy", "logit-masking"]
categories = ["algorithms"]

[dependencies]
torg-core = { version = "0.1", path = "../torg-core" }
